[gd_scene load_steps=9 format=3 uid="uid://baa2mjfjhd0gw"]

[ext_resource type="Script" path="res://levels/celar/Game3P/card_frame/card_frame.gd" id="1_1sx3c"]
[ext_resource type="PackedScene" uid="uid://dtlgrkau5ckeq" path="res://utilities/scenes/draggable/draggable.tscn" id="2_fkogi"]
[ext_resource type="Texture2D" uid="uid://c7usl7s4x6kg4" path="res://levels/celar/Game3P/card_frame/assets/burro_esq.png" id="3_l53kd"]
[ext_resource type="Texture2D" uid="uid://bbccrrkbusvpm" path="res://levels/celar/Game3P/card_frame/assets/cavalo_esq.png" id="4_yooss"]
[ext_resource type="Texture2D" uid="uid://du5wcdnfxn86r" path="res://levels/celar/Game3P/card_frame/assets/ovelha_esq.png" id="5_bw7dw"]
[ext_resource type="Texture2D" uid="uid://bww44ei7od0sv" path="res://levels/celar/Game3P/card_frame/assets/ovelha_marrom_esq.png" id="6_c8jsv"]
[ext_resource type="Texture2D" uid="uid://bscixp5vllnvr" path="res://levels/celar/Game3P/card_frame/assets/vaca_esq.png" id="7_bib38"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hmx12"]
size = Vector2(106.556, 238.916)

[node name="CardFrame" type="Node2D"]
script = ExtResource("1_1sx3c")

[node name="Draggable" parent="." instance=ExtResource("2_fkogi")]
position = Vector2(0, -74)

[node name="animal1" type="Sprite2D" parent="Draggable"]
visible = false
position = Vector2(-52, -4)
scale = Vector2(1.51471, 0.852381)
texture = ExtResource("3_l53kd")

[node name="animal2" type="Sprite2D" parent="Draggable"]
visible = false
position = Vector2(-51, -0.999989)
scale = Vector2(1.18941, 0.662212)
texture = ExtResource("4_yooss")

[node name="animal3" type="Sprite2D" parent="Draggable"]
visible = false
position = Vector2(-56, -1)
scale = Vector2(1.02857, 0.772926)
texture = ExtResource("5_bw7dw")

[node name="animal4" type="Sprite2D" parent="Draggable"]
visible = false
position = Vector2(-54.5038, -19.4697)
scale = Vector2(1.01898, 0.754571)
texture = ExtResource("6_c8jsv")

[node name="animal5" type="Sprite2D" parent="Draggable"]
visible = false
position = Vector2(-53, 1)
scale = Vector2(0.658621, 0.614094)
texture = ExtResource("7_bib38")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Draggable"]
position = Vector2(-1, -0.499998)
scale = Vector2(1.16371, 0.632022)
shape = SubResource("RectangleShape2D_hmx12")

[node name="Label" type="Label" parent="Draggable"]
offset_left = -23.0
offset_top = -18.0
offset_right = 22.0
offset_bottom = 5.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
